Added file headers with licence, rename some dir name

--- a/code/server/http/Makefile
+++ b/code/server/http/Makefile
@@ -2,14 +2,15 @@ CPP = g++
 CFLAGS = -pthread -g
 CFLAGS += -D__DEBUG -D__INFO -D__ERROR -D__FATAL
 
-INCS = -I./ -I../ -I./utils/
+INCS = -I./ -I../ -I./third_libs/ -I../common/utils/
+LIBS = -L./third_libs/
 
 TARGETS = httpserver
 
 all: $(TARGETS)
 
-httpserver: main.cc http_server.h http_server.cc handler_get.cc utils/http_parser.c
-	$(CPP) $(CFLAGS) $(INCS) -o $@ $^
+httpserver: main.cc http_server.h http_server.cc handler_get.cc third_libs/http_parser.c
+	$(CPP) $(CFLAGS) $(INCS) $(LIBS) -o $@ $^
 
 
 clean:
