Finished HttpMessageParser; Fixed bugs using char* together with c++ string; Added TODO list for Http Server module

--- a/code/server/http/Makefile
+++ b/code/server/http/Makefile
@@ -9,7 +9,7 @@ TARGETS = httpserver
 
 all: $(TARGETS)
 
-httpserver: main.cc http_server.h http_server.cc handler_get.cc third_libs/http_parser.c
+httpserver: main.cc http_server.h http_server.cc handler_get.cc third_libs/http_parser.c http_message_parser.cc
 	$(CPP) $(CFLAGS) $(INCS) $(LIBS) -o $@ $^
 
 
