finished pull/push for send/retrive command for device

--- a/code/server/restful/Makefile
+++ b/code/server/restful/Makefile
@@ -1,5 +1,5 @@
 CPP = g++
-CFLAGS = -pthread -g
+CFLAGS = -pthread -g -std=c++0x
 CFLAGS += -D__DEBUG -D__INFO -D__ERROR -D__FATAL
 
 INCS = -I./ -I../ -I../http/ -I../http/third_libs/ -I../common/utils/ -I./http_plugins -I./resources_handler/
@@ -8,7 +8,7 @@ TARGETS = restserver
 
 all: $(TARGETS)
 
-restserver: main.cc rest_server.cc resource.cc url_template.cc ../http/http_message_parser.cc ../http/third_libs/http_parser.c ../http/http_server.cc http_plugins/get_handler.cc resources_handler/get_users.cc
+restserver: main.cc rest_server.cc resource.cc url_template.cc ../http/http_message_parser.cc ../http/third_libs/http_parser.c ../http/http_server.cc http_plugins/get_handler.cc http_plugins/put_handler.cc resources_handler/get_users.cc
 	$(CPP) $(CFLAGS) $(INCS) $(LIBS) -o $@ $^
 
 
