--- a/code/server/business_dev/Makefile
+++ b/code/server/business_dev/Makefile
@@ -11,11 +11,11 @@ INCS = -I./ -I./resources_handler/ -I./entities/ -I../ -I$(HTTP_PATH) -I$(REST_P
 TARGETS = business
 
 HTTP_FILE = $(HTTP_PATH)http_message_parser.cc $(HTTP_PATH)third_libs/http_parser.c $(HTTP_PATH)http_server.cc
-REST_FILE = $(REST_PATH)rest_server.cc $(REST_PATH)resource.cc $(REST_PATH)url_template.cc $(REST_PATH)http_plugins/get_handler.cc $(REST_PATH)http_plugins/put_handler.cc
+REST_FILE = $(REST_PATH)rest_server.cc $(REST_PATH)resource.cc $(REST_PATH)url_template.cc $(REST_PATH)http_plugins/get_handler.cc $(REST_PATH)http_plugins/put_handler.cc $(REST_PATH)http_plugins/post_handler.cc
 
 all: $(TARGETS)
 
-business: main.cc $(HTTP_FILE) $(REST_FILE) resources_handler/put_command.cc resources_handler/get_command.cc 
+business: main.cc $(HTTP_FILE) $(REST_FILE) resources_handler/put_command.cc resources_handler/get_command.cc  resources_handler/post_device.cc resources_handler/post_data.cc
 	$(CPP) $(CFLAGS) $(INCS) $(LIBS) -o $@ $^
 
 
