Add device api into car client.

--- a/code/device/car/Makefile
+++ b/code/device/car/Makefile
@@ -1,17 +1,27 @@
-CC = gcc
+CC = g++
 CFLAGS = -g -Wall -pthread
+CFLAGS += -D__DEBUG -D__INFO -D__ERROR -D__FATAL
 LIBS = -ljpeg
-TARGETS = device_car
-OBJS = main.o \
-	   capture.o \
-	   command_extractor.o \
-	   command_parser_stub.o \
-	   video_container.o \
-	   jpeg_encoder_mjpeg.o \
-	   jpeg_encoder_yuv422.o
+API_DIR = ../../client/api/
+INCS = -I$(API_DIR) -I$(API_DIR)entities/ -I$(API_DIR)http/ -I$(API_DIR)http/third_libs -I../../server/common/utils/
 
-$(TARGETS):$(OBJS)
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+TARGETS = device_car
+
+SRC = main.c\
+	  capture.c\
+	  command_extractor.c\
+	  command_parser_stub.c\
+	  video_container.c\
+	  jpeg_encoder_mjpeg.c\
+	  jpeg_encoder_yuv422.c\
+	  my_callbackfunc.cc\
+	  $(API_DIR)device_api.cc\
+	  $(API_DIR)http_client.cc\
+	  $(API_DIR)http/http_message_parser.cc\
+	  $(API_DIR)http/third_libs/http_parser.c
+
+$(TARGETS):$(SRC)
+	$(CC) $(CFLAGS) $(INCS) -o $@ $^ $(LIBS)
 
 %.o:%.c
 	$(CC) $(CFLAGS) -c $<
