Finish the whole feature of car client.

--- a/code/device/car/Makefile
+++ b/code/device/car/Makefile
@@ -1,6 +1,6 @@
-CC = g++
-CFLAGS = -g -Wall -pthread
-CFLAGS += -D__DEBUG -D__INFO -D__ERROR -D__FATAL
+CC = arm-linux-g++
+CFLAGS = -g -pthread
+CFLAGS += -D__INFO -D__ERROR -D__FATAL
 LIBS = -ljpeg
 API_DIR = ../../client/api/
 INCS = -I$(API_DIR) -I$(API_DIR)entities/ -I$(API_DIR)http/ -I$(API_DIR)http/third_libs -I../../server/common/utils/
@@ -9,8 +9,9 @@ TARGETS = device_car
 
 SRC = main.c\
 	  capture.c\
+	  serial.c\
 	  command_extractor.c\
-	  command_parser_stub.c\
+	  command_parser.c\
 	  video_container.c\
 	  jpeg_encoder_mjpeg.c\
 	  jpeg_encoder_yuv422.c\
